# supplySystem

./: CMakeLists.txt  products.xml  spareGroups.xml  spareParts.xml  warehouses.xml
include/: addgroupdialog.h  addpartdialog.h  addpartstodialog.h  deletegroupgialog.h  identifier.h  mainwindow.h  product.h  sparePart.h  sparePartGroup.h  sparePartRecord.h  supplySystem.h  warehouse.h
source/: addgroupdialog.cpp  addpartdialog.cpp  addpartstodialog.cpp  deletegroupgialog.cpp  identifier.cpp  mainwindow.cpp  product.cpp  sparePart.cpp  supplyPartGroup.cpp  supplySystem.cpp  warehouse.cpp
uis/: addgroupdialog.ui  addpartdialog.ui  addpartstodialog.ui  deletegroupgialog.ui  mainwindow.ui
